# SlurmDocs

./: .gitignore  README.md  pyproject.toml
docs/api/sample_data/: chpc-compute-12-3.txt  node_info.txt
src/slurmdocs/cli/: cli.py
src/slurmdocs/cli/submodules/: collect_cli.py  db_cli.py  stats_cli.py
src/slurmdocs/collecter/: collecter.py
src/slurmdocs/collecter/icollecter/: __init__.py  lscpu_collecter.py  lscpu_icollecter.py  scontrol_show_node_collecter.py  scontrol_show_node_icollecter.py
src/slurmdocs/database/: base_database.py  slurm_cluster_database.py
src/slurmdocs/parse/: __init__.py  parser.py
src/slurmdocs/parse/iparse/: __init__.py  ilscpu.py  iscontrol.py
src/slurmdocs/session/: ssh_session.py
src/slurmdocs/statistics/: stat.py
src/slurmdocs/statistics/istat/: gpu_specs.csv  tflops.py
tests/database/: test_database.py
tests/database/sample_test_data/cpu_data/: gpu-0-1.txt
tests/database/sample_test_data/node_data/: node_info.txt
tests/parse/: test_parsing.py
tests/parse/test_data/: lscpu.out  scontrol.out
