[tool.poetry]
name = "slurmdocs"
version = "0.1.0"
description = "A simple cli tool to generate documentation for slurm"
authors = ["hades <nischalbhattaraipi@gmail.com>"]
readme = "README.md"
packages = [{include = "slurmdocs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.3.1"
pandas = "^2.1.0"
black = "^23.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select =["E", "F", "I", "UP", "ANN", "ARG", "D", "RET", "TCH"]
exclude = ["tests", "docs", "*test_*"]
src =['./slurmdocs']
# Ignore long lines and self annotations 
ignore =['ANN101', 'E501', 'ANN002', 'ANN003']

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"


[tool.black]
use-single-quotes = false
line-length = 88
skip-string-normalization = true
target-version = ["py310"]

[tool.black.paths]
include = ["/src"]

[tool.pytest.ini_options]
pythonpath = [
  "/src"
]